# mapper-fivetran

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
mapper_fivetran/: __init__.py  __main__.py  _util.py  arrow.py  mapper.py
tests/: __init__.py  test_arrow.py  test_batch.py  test_fivetran_synced.py  test_stream_map.py  test_util.py
