[project]
name = "mapper-fivetran"
dynamic = [ "version" ]
description = "Singer mapper Fivetran, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Reuben Frankel", email = "rfrankel@matatika.com" }]
keywords = [
    "ELT",
    "Mapper",
    "Fivetran",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies = [
    "msgspec>=0.18",
    "pyarrow>=17",
    "pyhumps>=3.8.0",
    "singer-sdk[msgspec]~=0.48.1",
]

[project.optional-dependencies]
s3 = [
    "fs-s3fs~=1.1.1",
]

[project.scripts]
# CLI declaration
mapper-fivetran = 'mapper_fivetran.mapper:FivetranMapper.cli'

[dependency-groups]
dev = [
    "pyarrow-stubs>=20.0.0.20260625",
    "pytest>=8",
    "singer-sdk[testing]",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
follow_untyped_imports = true
warn_unused_configs = true

[tool.ruff.lint]
ignore = [
    "ANN001",  # missing-type-function-argument
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D1",
    "S101",
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1.29.0,<2",
    "hatch-vcs",
]
build-backend = "hatchling.build"
